# Assignment8

./: CMakeLists.txt  README.md
docs/: CMakeLists.txt  ClassDiagram.puml  Doxyfile.in
src/: CMakeLists.txt  main.cpp
src/expressiontree/: Add.cpp  Add.h  BinaryNode.cpp  BinaryNode.h  CMakeLists.txt  Constant.cpp  Constant.h  Div.cpp  Div.h  ExpressionTree.cpp  ExpressionTree.h  LeafNode.cpp  LeafNode.h  Mul.cpp  Mul.h  Negative.cpp  Negative.h  Node.cpp  Node.h  Positive.cpp  Positive.h  Sub.cpp  Sub.h  UnaryNode.cpp  UnaryNode.h  Variable.cpp  Variable.h
src/statistics/: CMakeLists.txt  Statistic.cpp  Statistic.h
src/utils/: CMakeLists.txt  FileUtil.cpp  FileUtil.h
tests/: CMakeLists.txt  CMakeLists.txt.in  ExpressionTreeTests.cpp  test.cpp
